# appdcon

./: README.md  pyproject.toml  requirements.txt
appdcon/: manage.py
appdcon/appdcon/: asgi.py  settings.py  urls.py  views.py  wsgi.py
appdcon/appdcon/templates/appdcon/: index.html
appdcon/discourse/: apps.py  models.py  services.py  urls.py  views.py
appdcon/discourse/migrations/: 0001_initial.py  0002_rename_url_site_hostname.py
appdcon/fixtures/: discourse_sites.json
appdcon/users/migrations/: 0001_initial.py
